@startuml
scale 1
package DOOnjonsEtDragons
{
    package Personnages
    {
        class Personnage
        {
            - m_nom : String
            - m_race : Race
            - m_classe : Classe
            - m_caract : Caracteristique
            - m_inventaire : Array<Equipement>
            - m_equipement : Array<Equipement>
            + <<Create>> Personnage (nom:String, race:Race, caract:Caracteristique, inventaire:Array, equipement:Array)
            + sEquiper(equipement:Equipement)
            + ramasser()
        }

        class Monstre
        {
            - m_espece : String
            - m_numero : Integer
            - m_attaque : Attaque
            - m_caract : Caracteristique
            + attaquer()
            + seDeplacer()
        }

        enum Race
        {
            ELFE,
            HALFELIN,
            HUMAIN,
            NAIN
        }

        enum Classe
        {
            CLERC,
            GUERRIER,
            MAGICIEN,
            ROUBLARD
        }

        class Caracteristiques
        {
            - m_PDV : Integer
            - m_Force : Integer
            - m_Dexterite : Integer
            - m_ClasseArmure : Integer
            - m_Vitesse : Integer
            - m_Initiative : Integer
            + <<Create>> Caracteristique (pdv:Integer, force:Integer, dexterite:Integer, vitesse:Integer, initiative:Integer)
            + <<Create>> Caracteristique (pdv:Integer, force:Integer, dexterite:Integer, classeArmure:Integer, initiative:Integer)
            + attributionStats (personnage:Personnage)
        }
    }

    package DéroulementDuDonjon
    {
        class creationDonjon
        {
            + creationCarte():Void
            + creationObstacle():Void
            + creationMonstre():Void
            + placerPersonnages():Void
            + placerEquipements():Void
            + contexte():String
        }
        class tour
        {

        }
        class fin
        {

        }
    }

    class MDJ
    {
        - m_nom : String
        + debutPartie()
        + creerCarteDonjon():String
        + positionnerObstacle():String
        + creerMonstre():String
        + positionnerJoueur():String
        + positionnerEquipement():String
        + presentation():String
    }

    class Dé
    {
        + lancerDe(nmbDé:Integer, nmbFace:Integer) : Integer
    }


    package Equipement
    {
        abstract class Equipement <<abstract>>
        {
            - m_estLourde:Boolean
            - m_estADistance:Boolean
            - m_estCourante:Boolean

            - m_portee: Integer
            - m_degats: Integer

            - m_classArmure: Integer
        }

        class Arme extends Equipement
        {
            - m_estADistance:Boolean
            - m_estCourante:Boolean
            - m_portee: Integer
            - m_degats: Integer

        }

        class Armure extends Equipement
        {
            - m_estLourde:Boolean
            - m_classArmure: Integer
        }
    }
Caracteristiques <|-- Personnage
Caracteristiques <|-- Monstre
Personnage <|-- Classe
Personnage <|-- Race
}
@enduml